fix: 资源不存在语义修正、工作流任务详情 NPE、通道版本校验与 NL2 生成链路修复
- 资源"不存在"统一 404：环境/工作空间/MCP 服务/插件查询或删除不存在时抛 NOT_FOUND；修正 MCP_SERVICE_NOT_EXIST、WORKSPACE_NOT_EXISTED、RESOURCE_NOT_EXISTS、ENVIRONMENT_NOT_EXIST、WORKFLOW_ASYNC_TASK_NOT_FOUND、AGENT_VERSION_NOT_EXIST 绑定；showEnvironmentVariables/queryEnvironmentVariables 越权面修复（findById → findByIdAndProjectId）
- 工作流任务详情：getTaskEntityById 查空抛 404（消除删除成功假象），TaskStatus.valueOf 全部改 fromValue，checkStatus 非法/缺失状态显式抛 WORKFLOW_ASYNC_NOT_PENDING
- 发布通道：createAgentChannel（新建+更新分支）/createWorkflowChannel（新建+更新分支）/modifyAgentChannel/modifyWorkflowChannel 版本判空（AGENT_VERSION_NOT_EXIST / WORKFLOW_VERSION_NOT_FOUND）；移除 CreateChannelReq.versionId @NotBlank（version 判空已覆盖缺失场景，兼容 agentBuilder 通道）
- NL2 生成链路：manager wrapToSse 上游错误先发 error 帧再 completeWithError（错误不吞、message i18n 化）；NLChatReq.model 必传；agent_type 契约声明；resource 判空（顶层+子字段）

配套：新增/更新 UT 全覆盖（Java + Python，3 轮自检通过）；i18n 补 1058 文案；openapi 契约自动生成同步